# crewai-agentoracle

./: README.md  pyproject.toml
crewai_agentoracle/: __init__.py  tools.py
crewai_agentoracle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_crewai_tools.py
