[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-agentoracle"
version = "0.1.0"
description = "CrewAI tool for AgentOracle — trust verification for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "TKCollective"}]
keywords = ["crewai", "agentoracle", "trust", "verification", "ai-agents", "x402"]
dependencies = ["crewai>=0.50.0", "requests>=2.28.0"]

[project.urls]
Homepage = "https://agentoracle.co"
Repository = "https://github.com/TKCollective/crewai-agentoracle"

[tool.setuptools.packages.find]
include = ["crewai_agentoracle*"]
